--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>SendCokeTo</title>
+  <link rel="stylesheet" href="css/bootstrap.min.css"/>
   <link rel="stylesheet" href="css/app.css"/>
 </head>
 <body ng-controller="MainCtrl">
@@ -24,7 +25,6 @@
 
     ga('create', 'UA-33428772-4', 'narze.github.io');
     ga('send', 'pageview');
-
   </script>
 </body>
 </html>
